--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "formik": "^2.4.6",
+    "queue-microtask": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
